Bug 15191 - Serials display improvements, Front-end followup. No newView for non Item Serials.
Hide Subscritpions calculations for SerialItems from sc.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
@@ -1000,7 +1000,7 @@ function verify_images() {
 [% END %]
 </div>
 
-[% IF UseBetaFeatures && subscriptionsnumber %][%# Serials display improvements fix%]
+[% IF UseBetaFeatures && subscriptionsnumber && serialsadditems %][%# Serials display improvements fix%]
 <script type="text/javascript" src="[% interface %]/lib/jquery/plugins/jstree.min.js"></script>
 <script type="text/javascript" src="[% interface %]/lib/log4javascript.js"></script>
 <script type="text/javascript" src="[% themelang %]/js/Serials/CollectionMap.js"></script>
