Lumme #559 Group up the imported batch items
This commit will group up the imported batch items displayed in the
Koha's addorderiso2709.pl site. The items will be grouped up by the
value in marcxml file's field 971d.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/addorderiso2709.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/addorderiso2709.tt
@@ -184,9 +184,11 @@
                         [% FOREACH cur IN loop_currencies %]
                             <input type="hidden" name="[% cur.currency %]" value="[% cur.rate %]" />
                         [% END %]
-
+                        [% FOREACH itemgroup IN item_group_list %]
+                            <h3>[% itemgroup %]</h3>
                         [% lastSelectionListName = '' %]
                         [% FOREACH biblio IN biblio_list %]
+                        [% IF biblio.batchitemgroup == itemgroup %]
                         [% IF lastSelectionListName != biblio.selectionListName %]
                             <h3>[% biblio.selectionListName %]</h3>
                             <hr/>
@@ -269,6 +271,8 @@
                             </li>
                           </ol>
                         </fieldset>
+                        [% END %]
+                        [% END %]
                         [% END %]
                       </div>
                       <div id="items_info">
