KD-207-1 - OKM Annual statistics. Refactored to a configurable model. Improved error logging.
Introduces a new SysPref OKM which controls how the statistics are created.

Introduces a okm_statistics_logs-table which stores log entries (errors)
from the server-side statistics generation. Thus it is much easier to react
to errors. Also included are error descriptions and some help on how to deal
with various errors.

Removed updatedatabase.pl -entry and replaced it with Atomicupdater

Added a check to see if feature "KD-257 - Precalculated Biblio data elements -table"
is deployed correctly.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/okm_reports.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/okm_reports.tt
@@ -7,6 +7,22 @@
 [% INCLUDE 'circ-search.inc' %]
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/reports-home.pl">Reports</a> &rsaquo; OKM annual report</div>
+
+[% IF okm_report_errors %]<div id="le_report_errors">[% okm_report_errors %]</div>[% END %]
+[% IF okm_conf_errors %]<div class="dialog alert">[% okm_conf_errors %]</div>[% END %]
+
+[% IF okm_logs %]
+    <div id="logs">
+        <ul>
+            <h4>Errors when creating OKM statistics</h4>
+            <button id="removeLogEntries">Remove logs</button>
+            [% FOREACH entry IN okm_logs %]
+                <li>[% entry.entry %]</li>
+            [% END %]
+        </ul>
+    </div>
+[% END %]
+
 <div id="page" style="margin-left: 1em;">
 
     <h1>OKM annual reports</h1>
@@ -16,7 +32,6 @@
     [% IF okm %][% INCLUDE 'okm_asHtml.inc' libraryGroups=okm.getLibraryGroups() %][% END %]
     <div id="le_report_html">[% okm_report_html %]</div>
     <div id="le_report_csv">[% okm_report_csv %]</div>
-    [% IF okm_report_errors %]<div id="le_report_errors">[% okm_report_errors %]</div>[% END %]
 
     <br/>
 
@@ -34,8 +49,10 @@
         </fieldset>
     </form>
 
-    <h5>Quote of the day!</h5>
-    [% quote %]
+    <div style="max-width: 600px">
+        <h5>Quote of the day!</h5>
+        [% quote %]
+    </div>
 
     <br/>
     <table id="available_reports">
@@ -75,12 +92,12 @@
             [% END %]
         </tbody>
     </table>
-
-</div>
+</div> [%# #page %]
 
 <script type="text/javascript">
 
 var MSG_OKM_STAT_DELETE_WARNING = _("Are you sure you want to delete this report?\nRebuilding can only be done from the serve side.");
+var MSG_OKM_LOGS_DELETE_WARNING = _("Are you sure you want to delete all log entries?\nYour friendly support member must first identify the source of the error and fix it.");
 
     $(document).ready( function () {
 
@@ -92,6 +109,15 @@ var MSG_OKM_STAT_DELETE_WARNING = _("Are you sure you want to delete this report
         });
 
         $(".highlighted-row").children().addClass("highlighted-row");
+
+        $("#removeLogEntries").click(function (event) {
+            var ok = confirm(MSG_OKM_LOGS_DELETE_WARNING);
+            if(! ok ) {
+                e.preventDefault();
+                return;
+            }
+            window.location="/cgi-bin/koha/reports/okm_reports.pl?op=deleteLogs";
+        });
     });
 </script>
 [% INCLUDE 'intranet-bottom.inc' %]
