KD#679 - Searching: Hide component parts / host items
This patch adds a feature to searching, which allows to filter out component
parts or host items from results. Changes for both intranet and OPAC.

To test (same for both OPAC and intranet):

1. Navigate to Advanced search
2. Search anything that results both component parts and host items
3. Observe that results are both component parts and host items
4. Go back to Advanced search
5. From "Limit to linked resources", select "Host items"
6. Make the same search as in step 2
7. Observe that results are only host items
8. Go back to Advanced search
9. From "Limit to linked resources", select "Component parts"
10. Make the same search as in step 2
11. Observe that results are only component parts
12. Click "Show only host items" from facets under "Component parts"
13. Observe that the results no longer have any results that are
    component parts
14. Click "Show all" from facets under "Component parts"
15. Observe that the results are again both component parts and
    host items
16. Click "Show only component parts" from facets under "Component parts"
17. Observe that the results no longer have any results that are
    host items
18. Click "Show all" from facets under "Component parts"
19. Observe that the results now have also the host items

--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-advsearch.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-advsearch.tt
@@ -237,8 +237,20 @@
                         </div>
                     <!-- RANK LIMITS -->
                     </div> <!-- / .span3 -->
+                    <div class="span3">
+                        <div id="linked-resources">
+                            <fieldset>
+                                <legend>Limit to linked resources:</legend>
+                                <select name="limit" size="2" multiple>
+                                    <option value="only_host_items">Host items</option>
+                                    <option value="only_component_parts">Component parts</option>
+                                </select>
+                            </fieldset>
+                        </div>
+                    </div>
                 </div> <!-- / .row-fluid -->
 
+                
                 [% IF ( expanded_options ) %]
                     <div class="row-fluid">
                         [% IF ( usmarc ) %]
