--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/advsearch.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/advsearch.tt
@@ -134,6 +134,11 @@
     [% END %]
     [% END %]
     </table>
+	<h4>Limit to linked resources:</h4>
+	<select name="limit" size="2" multiple>
+		<option value="only_host_items">Only host items</option>
+		<option value="only_component_parts">Only component parts</option>
+	</select>
     </div>
     [% END %]
 <!-- /MC-TYPE LIMIT -->
