KD#679 Move component part limit element in OPAC advanced search
Position the component part limit element under "Languages" so it
is better visible for the user.

--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-advsearch.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-advsearch.tt
@@ -186,6 +186,17 @@
                                 <!-- /LANGUAGE LIMIT -->
                             </fieldset>
                         </div> <!-- / #langfilter -->
+                        <div id="linked-resources">
+                            <fieldset>
+                                <!-- LINKED RESOURCES LIMIT -->
+                                <legend>Limit to linked resources:</legend>
+                                <select name="limit" size="2" multiple>
+                                    <option value="only_host_items">Host items</option>
+                                    <option value="only_component_parts">Component parts</option>
+                                </select>
+                                <!-- /LINKED RESOURCES LIMIT -->
+                            </fieldset>
+                        </div> <!-- / #linked-resources -->
                     </div> <!-- / .span3 -->
 
                     [% UNLESS ( singleBranchMode ) %]
@@ -237,17 +248,6 @@
                         </div>
                     <!-- RANK LIMITS -->
                     </div> <!-- / .span3 -->
-                    <div class="span3">
-                        <div id="linked-resources">
-                            <fieldset>
-                                <legend>Limit to linked resources:</legend>
-                                <select name="limit" size="2" multiple>
-                                    <option value="only_host_items">Host items</option>
-                                    <option value="only_component_parts">Component parts</option>
-                                </select>
-                            </fieldset>
-                        </div>
-                    </div>
                 </div> <!-- / .row-fluid -->
 
                 
